# ARcane

./: .gitattributes  .gitmodules  CMakeLists.txt  README.md  imgui.ini
assets/shaders/: FlatColor.glsl  Texture.glsl  Texture2D.glsl  Texture3D.glsl
examples/: example.cpp  moving_triangle.cpp
include/: ARcane.hpp
include/ARcane/: Application.hpp  Core.hpp  EntryPoint.hpp  Event.hpp  ImGuiLayer.hpp  Input.hpp  Layer.hpp  LayerStack.hpp  Log.hpp  Window.hpp  test.hpp  window.hpp
include/ARcane/Camera/: Camera.hpp  CameraStream.hpp
include/ARcane/Core/: Application.hpp  Core.hpp  Input.hpp  Timestep.hpp  Window.hpp
include/ARcane/Core/Events/: ApplicationEvent.hpp  Event.hpp  KeyEvent.hpp  MouseEvent.hpp
include/ARcane/Core/Layers/: ImGuiLayer.hpp  Layer.hpp  LayerStack.hpp
include/ARcane/Debug/: Instrumentor.hpp
include/ARcane/Events/: ApplicationEvent.hpp  Event.hpp  KeyEvent.hpp  MouseEvent.hpp
include/ARcane/Layers/: ImGuiLayer.hpp  Layer.hpp  LayerStack.hpp
include/ARcane/Renderer/: Buffer.hpp  GraphicsContext.hpp  OrthographicCamera.hpp  OrthographicCameraController.hpp  OrtographicCamera.hpp  Renderer.hpp  Renderer2D.hpp  Shader.hpp  Texture.hpp  VertexArray.hpp
include/ARcane/stb/: stb_image.h
include/glad/: glad.h
src/: Application.cpp  Buffer.cpp  Core.cpp  GraphicsContext.cpp  ImGuiLayer.cpp  Input.cpp  Layer.cpp  LayerStack.cpp  Log.cpp  OrthographicCamera.cpp  OrthographicCameraController.cpp  OrtographicCamera.cpp  Renderer.cpp  Renderer2D.cpp  Shader.cpp  Texture.cpp  VertexArray.cpp  Window.cpp  stb_image.cpp  test.cpp  window.cpp
src/Camera/: Camera.cpp  CameraStream.cpp
src/Core/: Application.cpp  Input.cpp  Log.cpp  Window.cpp
src/Core/Layers/: ImGuiLayer.cpp  Layer.cpp  LayerStack.cpp
src/Renderer/: Buffer.cpp  Renderer.cpp  Renderer2D.cpp  Shader.cpp  Texture.cpp
src/glad/: glad.c
